Comandos a funcionar do menu inicial, comando passatempo a funcionar no campeonato. Escolhe pares e autodromos para o campeonato a funcionar. Falta condição de paragem do passatempo.

--- a/Trabalho_POO_NOvo/Trabalho_POO_NOvo.vcxproj
+++ b/Trabalho_POO_NOvo/Trabalho_POO_NOvo.vcxproj
@@ -153,20 +153,24 @@
   <ItemGroup>
     <ClCompile Include="Autodromo.cpp" />
     <ClCompile Include="Autodromos.cpp" />
+    <ClCompile Include="Campeonato.cpp" />
     <ClCompile Include="Carro.cpp" />
     <ClCompile Include="Consola.cpp" />
     <ClCompile Include="DGV.cpp" />
     <ClCompile Include="Interface.cpp" />
+    <ClCompile Include="Par_Campeonato.cpp" />
     <ClCompile Include="Piloto.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Autodromo.h" />
     <ClInclude Include="Autodromos.h" />
+    <ClInclude Include="Campeonato.h" />
     <ClInclude Include="Carro.h" />
     <ClInclude Include="Consola.h" />
     <ClInclude Include="DGV.h" />
     <ClInclude Include="Interface.h" />
+    <ClInclude Include="Par_Campeonato.h" />
     <ClInclude Include="Piloto.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
