--- a/Trabalho_POO_NOvo/Trabalho_POO_NOvo.vcxproj.filters
+++ b/Trabalho_POO_NOvo/Trabalho_POO_NOvo.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="Consola.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Campeonato.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Par_Campeonato.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DGV.h">
@@ -60,6 +66,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Consola.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Campeonato.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Par_Campeonato.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
