--- a/Trabalho_POO_NOvo/Trabalho_POO_NOvo.vcxproj.filters
+++ b/Trabalho_POO_NOvo/Trabalho_POO_NOvo.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Par_Campeonato.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Garagem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DGV.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Par_Campeonato.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Garagem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
